data/derived/comb/progs/unify/prog1999.ml.out
Characters 115-133:
  -> buildSine(build (rand,d-1))
              ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
